--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 document.body.style.paddingTop = `${safeArea.top + 20}px`;
                 document.body.style.paddingLeft = `${safeArea.left - 10}px`;
                 document.body.style.paddingRight = `${safeArea.right - 10}px`;
+                document.getElementById("score").style.paddingTop = `${safeArea.top + 40}px`;
+                document.getElementById("bestScore").style.paddingTop = `${safeArea.top + 40}px`;
             }
             // Apply safe area padding
 
